Optimize SCSS; Avoid HTML line wrapping
Avoid beginning CSS selectors with elements
.(descriptive_name)_list works well for unique list class naming
Use Sass nesting

Nest HTML children to avoid line wrapping

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -847,24 +847,21 @@ table.table {
 
 .wdn-responsive-embed .wdn-responsive-item,.wdn-responsive-embed embed,.wdn-responsive-embed iframe,.wdn-responsive-embed object,.wdn-responsive-embed video{border:0;position:absolute;top:0;left:0;width:100%;height:100%}
 
+
+
 /* Experimental Index page styling */
+.index_list {
+  display: table;
 
+  li {
+    display: table-row;
 
-
-ul.index_list {
-    display: table;
+    .badge,
+    .badge_surround,
+    .index_term,
+    .index_type {
+      display: table-cell;
+    }
   }
-
-ul.index_list li {
-  display: table-row;
 }
 
-ul.index_list li .index_term,
-ul.index_list li .badge_surround,
-ul.index_list li .index_type {
-  display: table-cell;
-}
-
-ul.index_list li .badge {
-  display: table-cell;
-}
